tests/cases/fail/enum_arithmetic.p4
enum TokenKind:
    IDENT
    NUMBER

def main() -> None:
    value = TokenKind.IDENT + 1
    print(value)
